chore(mypy config): fix config set to be able to run correctly

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,10 @@
 [mypy]
-verbose = True
-mypy_path = ./src
-files = ./src/*.py
+mypy_path = src
+files = src/**/*.py
 namespace_packages = True
 
 # Dynamic typing
 disallow_any_unimported = True
-disallow_any_expr = True
 disallow_any_decorated = True
 disallow_any_explicit = True
 
@@ -29,7 +27,6 @@ warn_unreachable = True
 
 # Error messages
 show_error_context = True
-show_column_numbers = True
 show_error_codes = True
 pretty = True
 show_absolute_path = True
