--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ pyflakes = "~=2.1"
 pycodestyle = "~=2.5"
 radon = "~=4.1"
 bandit = "~=1.6"
+pytest-mock = "~=2.0"
+watchdog = {extras = ["watchmedo"],version = "~=0.10"}
 
 [packages]
 haversine = "~=2.2"
